--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,4 +1,3 @@
-
 /* Mobile */
 /* Common button styles */
 .btn {
@@ -15,7 +14,6 @@
   text-align: center;
 }
 
-
 /* Navigation */
 .nav {
   display: flex;
@@ -24,71 +22,61 @@
   align-items: center;
   gap: 10px;
   border-radius: 30px;
-  border: 1px solid #323F47;
+  border: 1px solid #323f47;
   margin: 32px 16px;
-
 }
-
 
 /* Signup button */
 .signup {
   padding: 14px 20px;
-  background: #9BE1A0;
-  color: #323F47;
+  background: #9be1a0;
+  color: #323f47;
 }
 
 .signup:hover,
 .signup:focus {
-  background: #87D28D;
+  background: #87d28d;
 }
 
 .signup:disabled {
-  background: #E6E6E6;
-  color: #BCBCBC;
+  background: #e6e6e6;
+  color: #bcbcbc;
 }
 
 /* Signin button */
 .signin {
   padding: 14px 28px;
-  border: 1px solid #323F47;
-  color: #323F47;
+  border: 1px solid #323f47;
+  color: #323f47;
 }
 
 .signin:hover,
 .signin:focus {
-  border-color: #87D28D;
-  color: #87D28D;
+  border-color: #87d28d;
+  color: #87d28d;
 }
 
 .signin:disabled {
   opacity: 0.2;
-  border-color: #323F47;
-  color: #323F47;
+  border-color: #323f47;
+  color: #323f47;
 }
-
 
 /* Tablet */
 @media screen and (min-width: 768px) {
-  .btn{
-
-font-size: 16px;
-line-height: 24px; /* 150% */
-letter-spacing: -0.16px;
+  .btn {
+    font-size: 16px;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
   }
 
-  .nav{
+  .nav {
 
-      padding: 18px 40px;
-      gap: 16px;
+    gap: 16px;
   }
-
-
-
+  .signin, .signup{
+    padding: 18px 40px;
+  }
 }
 
-/* Desktop */
 
-@media screen and (min-width: 1280px){
-
-
-}
