--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -27,18 +27,21 @@
 }
 
 /* Signup button */
-.signup {
+.signup, .Google {
   padding: 14px 20px;
   background: #9be1a0;
   color: #323f47;
 }
 
 .signup:hover,
-.signup:focus {
+.signup:focus,
+.Google:hover,
+.Google:focus{
   background: #87d28d;
 }
 
-.signup:disabled {
+.signup:disabled,
+.Google:disabled {
   background: #e6e6e6;
   color: #bcbcbc;
 }
