--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -3,8 +3,8 @@
   height: 353px;
   flex-shrink: 0;
   border-radius: 30px;
-  background: url(<path-to-image>) lightgray -102.72px -12px / 162.166% 105.099%
-    no-repeat;
+  /* background: url(<path-to-image>) lightgray -102.72px -12px / 162.166% 105.099%
+    no-repeat; */
   padding: 32px 16px;
 }
 
@@ -30,7 +30,7 @@
   flex-shrink: 0;
   border-radius: 50px;
   border: 2px solid #fff;
-  background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+  /* background: url(<path-to-image>) lightgray 50% / cover no-repeat; */
   margin-left: -10px;
 }
 
