--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,7 +1,7 @@
 .logo {
 
-  text-align: center;
-  font-family: 'Poppins';
+  text-align: start;
+
   font-size: 18px;
   font-weight: 700;
   line-height: 1.1;
