--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap:16px;
+  align-items: center;
 
 
 }
@@ -13,6 +14,7 @@
   .HomePageContainer{
     flex-direction: row;
     gap: 32px;
+   
 
   }
 }
