--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -5,6 +5,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  padding: 32px 16px;
   width: 100%;
   max-width: 704px;
   margin: 0 auto;
@@ -20,9 +21,9 @@
   background: #fff;
   box-shadow: 0 4px 50px rgba(0, 0, 0, 0.1);
   margin-top: 209px;
-  margin-left: 16px;
+
   margin-bottom: 8px;
-  width: 180px;
+
   height: 48px;
   gap: 4px;
 }
@@ -32,18 +33,26 @@
   position: relative;
 }
 
+.customersImg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .customersImg {
   flex-shrink: 0;
   border-radius: 50px;
   border: 2px solid #fff;
   margin-left: -10px;
+  width: 28px;
+  height: 28px;
 }
 
 .customersText {
-  text-align: right;
   font-size: 12px;
   font-weight: 700;
   line-height: 14px;
+  width: 90px;
 }
 
 .happy {
@@ -58,7 +67,6 @@
   gap: 4px;
   flex-wrap: wrap;
   margin-left: 160px;
-  margin-bottom: 32px;
 }
 
 .habitContainer {
@@ -94,7 +102,6 @@
   padding: 9px 12px;
   justify-content: center;
   align-items: center;
-  gap: 10px;
   border-radius: 30px;
 }
 
@@ -122,18 +129,39 @@
   .advantages {
     width: 658px;
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/ncrpeodjj9zflxafe1xb');
-  min-height: 440px;
+    min-height: 440px;
+    padding: 32px;
   }
 
+  .customersContainer {
+    padding: 10px 20px;
+    align-items: center;
+    margin-top: 537px;
 
-  /* .customersText {
+    margin-bottom: 0;
+  }
+
+  .customersImg {
+    width: 47px;
+    height: 47px;
+  }
+
+  .customersText {
     font-size: 15px;
     line-height: 1.5;
+    width: 100px;
+  }
+
+  .benefits {
+    width: 242px;
+    margin-left: auto;
+    margin-top: -20px;
+    gap: 10px;
   }
 
   .statistics,
-  .habitContainer,
-  .setting {
+  .setting,
+  .habitContainer {
     padding: 11px 16px;
   }
 
@@ -143,7 +171,7 @@
     font-size: 12px;
     line-height: 1;
     letter-spacing: -0.12px;
-  } */
+  }
 }
 
 /* Desktop */
@@ -152,28 +180,29 @@
   .advantages {
     width: 672px;
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/jbfi4mcwyi6qc8s4ycpi');
-min-height:700px;
+    min-height: 722px;
   }
 }
 
 /* Retina */
 
 @media screen and (min-resolution: 192dpi),
-       screen and (-webkit-min-device-pixel-ratio: 2) {
+  screen and (-webkit-min-device-pixel-ratio: 2) {
   .advantages {
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/jbfi4mcwyi6qc8s4ycpi');
   }
+
 }
 
 @media screen and (min-width: 768px) and (min-resolution: 192dpi),
-       screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
+  screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
   .advantages {
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/mmidk94jcczcxl5rsutz');
   }
 }
 
 @media screen and (min-width: 1280px) and (min-resolution: 192dpi),
-       screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2) {
+  screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2) {
   .advantages {
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/ucqyki2cvgbqbafwxysy');
   }
