--- a/src/components/WelcomeSection/WelcomeSection.module.css
+++ b/src/components/WelcomeSection/WelcomeSection.module.css
@@ -3,7 +3,7 @@
   flex-shrink: 0;
   border-radius: 30px;
   background: var(--light-gray);
-
+padding:24px 16px;
   text-align: left;
   align-self: center;
   margin: 0;
