--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -71,7 +71,7 @@
 .input {
   border-radius: 15px;
   border: 1px solid rgba(47, 47, 47, 0.2);
-  width: 311px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   padding: 16px 184px 16px 16px;
@@ -105,14 +105,17 @@
 
 .wrapPass {
   position: relative;
+  width: 100%;
 }
 
 .toggle {
-  position: relative;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
   background: none;
   border: none;
   cursor: pointer;
-  color: #333;
   font-size: 18px;
 }
 
@@ -159,6 +162,7 @@
 
   text-align: center;
   justify-content: center;
+  align-items: stretch;
   margin-bottom: 16px;
 }
 
@@ -194,7 +198,6 @@
 @media screen and (min-width: 768px) {
   .infoContainer {
     width: 704px;
-    max-height: 960px;
     padding: 32px;
   }
 
