--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -188,11 +188,39 @@
   font-weight: 400;
   line-height: 18px;
   letter-spacing: -0.14px;
+  margin-bottom: 16px;
 }
 
 .redirect {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.google {
+  height: 56px;
+  width: 168px;
+  background: transparent;
+  border: 2px solid rgb(35, 195, 35);
+  border-radius: 30px;
+  transition: box-shadow 0.3s ease;
+}
+
+.google:hover,
+.google:focus {
+  cursor: pointer;
+  background: #82ea8a;
+  box-shadow: 0 0 10px rgba(0, 123, 255, 0.7);
+}
+
+.register {
+  color: rgba(47, 47, 47, 0.5);
+
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: -0.14px;
 }
 
 @media screen and (min-width: 768px) {
