--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -4,6 +4,8 @@
   background: var(--light-gray);
   padding: 24px 16px;
   text-align: left;
+  max-width: 100%;
+  min-height: 100%;
 }
 
 .SignUpForm {
@@ -12,6 +14,10 @@
   padding: 16px;
   gap: 16px;
   align-self: center;
+}
+
+.logo {
+  margin-bottom: 110px;
 }
 
 .SignText {
@@ -24,6 +30,25 @@
   gap: 8px;
 }
 
+.wrapPass {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.toggle {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  font-size: 18px;
+  display: none;
+}
+
 .input {
   display: flex;
   padding: 16px;
@@ -32,6 +57,8 @@
   border-radius: 15px;
   border: 1px solid rgba(47, 47, 47, 0.2);
   background: var(--light-gray);
+  width: 100%;
+  padding-right: 40px;
 }
 
 .btn {
@@ -69,6 +96,12 @@
   }
   .SignUpForm {
     padding: 102px;
+  }
+  .toggle {
+    display: block;
+  }
+  .logo {
+    margin-bottom: 69px;
   }
 }
 
