--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -28,7 +28,7 @@
     background-size: 374px 477px;
   }
   .container {
-    padding: 33px 33px 64px;
+    padding: 33px 33px 64px 33px;
   }
   .title {
     font-size: 24px;
