--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -59,6 +59,15 @@
   background: var(--light-gray);
   width: 100%;
   padding-right: 40px;
+  transition: border-color 0.3s ease;
+}
+
+.inputError {
+  border: 1px solid #ef5050;
+}
+
+.error {
+  color: #ef5050;
 }
 
 .btn {
