info block added

--- a/src/components/UserSettingsForm/UserSettingsForm.module.css
+++ b/src/components/UserSettingsForm/UserSettingsForm.module.css
@@ -173,7 +173,7 @@
     line-height: 1.28em;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1439px) {
+@media only screen and (min-width: 768px) {
 
     .avatarImage{
         width: 100px;
