--- a/src/components/UserSettingsModal/UserSettingsModal.module.css
+++ b/src/components/UserSettingsModal/UserSettingsModal.module.css
@@ -10,7 +10,7 @@
 
 
 
-@media only screen and (min-width: 768px) and (max-width: 1439px) {
+@media only screen and (min-width: 768px) {
    .modalContainer{
     max-width: 568px;
   }
