--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -38,8 +38,11 @@
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  align-content: center;
+  padding: 16px;
+  gap: 16px;
+  align-self: center;
 }
 
 .inputBox {
