--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -28,7 +28,7 @@
     background-size: 374px 477px;
   }
   .container {
-    padding: 33px 33px 64px 33px;
+    padding: 33px 33px 60px 33px;
   }
   .title {
     font-size: 24px;
@@ -38,7 +38,7 @@
 @media screen and (min-width: 1440px) {
   .section {
     width: 672px;
-    height: calc(100vh - 64px);
+    min-height: calc(100vh - 64px);
     background-size: 472px 604px;
   }
   .title {
@@ -53,7 +53,7 @@
   display: flex;
   justify-content: flex-end;
 }
-.addWaterBtn {
+.addWaterBtnMainInfo {
   display: inline-flex;
   align-items: center;
   gap: 10px;
@@ -69,7 +69,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .addWaterBtn {
+  .addWaterBtnMainInfo {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: -0.16px;
@@ -77,7 +77,7 @@
 }
 
 @media screen and (min-width: 1440px) {
-  .addWaterBtn {
+  .addWaterBtnMainInfo {
     padding: 18px 30px;
   }
 }
